--- a/css/partials/variables.scss
+++ b/css/partials/variables.scss
@@ -1,7 +1,10 @@
 $black: #474D5C;
 $white: #FFF;
 $blue: #52ACDB;
-$light-beige: #F3F3F3;
+$bg-light-beige: #F3F3F3;
+$red: #E74F89;
+$green: #21AC8B;
+$light-gray: #F3F3F3;
 
 
 
