--- a/css/partials/slide-block-head.scss
+++ b/css/partials/slide-block-head.scss
@@ -2,4 +2,17 @@
   background-color: $blue;
   width: 100%;
   height: 100vh;
+  text-align: right;
+
+  &__heading {
+    h1 {
+      color: $white;
+      font-size: 25px;
+      font-family: $mainFont;
+    }
+    p {
+      font-family: $subFont;
+      color: $white;
+    }
+  }
 }
