--- a/css/partials/styileguide.scss
+++ b/css/partials/styileguide.scss
@@ -3,7 +3,18 @@
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
-  margin-left: auto
+  margin-left: auto;
+  &--header-block {
+      display: flex;
+      justify-content: space-between;
+      width: 80%;
+    }
+  &--slide-block-head {
+    display: flex;
+    align-content: center;
+
+  }
+
 }
 
 @media (min-width: 576px) {
@@ -27,5 +38,26 @@
 @media (min-width: 1200px) {
   .container {
     max-width: 1140px
+  }
+}
+
+a.btn {
+  border: 1px solid $white;
+  padding: 10px 20px;
+  text-align: center;
+  display: block;
+  color: $white;
+  text-transform: uppercase;
+  height: 53px;
+  max-width: 300px;
+  font-size: 20px;
+  font-family: $subFont;
+  border-radius: 3px;
+  &:hover, &:active, &:focus {
+    background-color: $white;
+    color: $blue;
+  }
+  &--red {
+
   }
 }
