--- a/css/style.scss
+++ b/css/style.scss
@@ -16,4 +16,5 @@ body {
 @import "partials/variables.scss";
 @import "partials/styileguide.scss";
 @import "partials/header-block.scss";
-@import "partials/slide-block-head";
+@import "partials/slide-block-head.scss";
+@import "partials/slide-block.scss";
