--- a/css/partials/header-block.scss
+++ b/css/partials/header-block.scss
@@ -33,6 +33,7 @@
       height: 22px;
       width: 30px;
       position: absolute;
+      right: 0;
       &:nth-of-type(2) {
         top: 6px;
       }
