--- a/css/partials/slide-block-head.scss
+++ b/css/partials/slide-block-head.scss
@@ -1,18 +1,30 @@
 .slide-block-head {
-  background-color: $blue;
   width: 100%;
   height: 100vh;
   text-align: right;
-
+  background: url("../img/phone-img.svg") 13% 330px no-repeat;
+  background-size: 17%;
+  background-color: $blue;
   &__heading {
+    width: 100%;
     h1 {
       color: $white;
-      font-size: 25px;
+      font-weight: 100;
+      font-size: 50px;
       font-family: $mainFont;
     }
     p {
       font-family: $subFont;
       color: $white;
+      font-size: 30px;
+      font-weight: 100;
+      margin-bottom: 45px;
+    }
+    .btn {
+      &--white-blue {
+
+      }
     }
   }
+
 }
