--- a/css/partials/styileguide.scss
+++ b/css/partials/styileguide.scss
@@ -1,18 +1,37 @@
 .container {
   width: 100%;
+  height: 100%;
+  min-width: 1110px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  &--header-block {
-      display: flex;
-      justify-content: space-between;
-      width: 80%;
-    }
-  &--slide-block-head {
-    display: flex;
-    align-content: center;
 
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    &--header-block {
+      justify-content: space-between;
+    }
+    &--slide-block-head {
+      align-items: center;
+      justify-content: right;
+    }
+    &--slide-block {
+      align-items: center;
+    }
+    &--around-slide-block {
+      justify-content: flex-end;
+    }
+    &--center-slide-block {
+      align-items: center;
+      justify-content: center;
+    }
+    &--soc-slide-block {
+      align-items: center;
+      justify-content: center;
+    }
   }
 
 }
@@ -37,27 +56,46 @@
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px
+    max-width: 1110px
   }
 }
-
+h1, h2, h3, p {
+  margin: 10px 0;
+}
 a.btn {
-  border: 1px solid $white;
-  padding: 10px 20px;
+  border: 2px solid $white;
+  padding: 15px 25px;
   text-align: center;
-  display: block;
   color: $white;
   text-transform: uppercase;
   height: 53px;
   max-width: 300px;
-  font-size: 20px;
+  font-size: 15px;
   font-family: $subFont;
-  border-radius: 3px;
+  border-radius: 2px;
+  position: relative;
   &:hover, &:active, &:focus {
     background-color: $white;
     color: $blue;
+    text-decoration: none;
   }
   &--red {
+    color: $red;
+    border-color: $red;
+    text-decoration: none;
+    &:hover, &:active, &:focus {
+      background-color: $red;
+      color: $white;
+    }
+  }
+  &--green {
+    text-decoration: none;
+    &:hover, &:active, &:focus {
+      color: $green;
+    }
+  }
 
+  i {
+    margin-left: 10px;
   }
 }
