--- a/css/partials/variables.scss
+++ b/css/partials/variables.scss
@@ -1,10 +1,13 @@
 $black: #474D5C;
+$dark-gray: #545454;
 $white: #FFF;
 $blue: #52ACDB;
+$light-blue: #6EC5EA;
 $bg-light-beige: #F3F3F3;
 $red: #E74F89;
 $green: #21AC8B;
 $light-gray: #F3F3F3;
+$placeholder-color: #D3D3D3;
 
 
 
