--- a/css/partials/header-block.scss
+++ b/css/partials/header-block.scss
@@ -50,29 +50,47 @@
 .menu-list {
   width: 100%;
   height: 100vh;
-  background-color: white;
-  z-index: 9;
   position: absolute;
   left: 0;
-  top: 0;
-  display: none;
+  top: -100vh;
+  background-color: $bg-light-beige;
+  transition: 0.5s;
+  z-index: 11;
+  opacity: 0;
+
 
   &.show {
-    display: block;
+    top: 0;
+    opacity: 1;
+
+
   }
 
   ul {
-    width: 70%;
+    width: 80%;
     margin: 40px auto;
     list-style-type: none;
+    text-align: center;
+    padding-left: 0;
   }
 
   &__item {
-    margin: 10px;
+    margin: 20px;
 
     a {
       color: $black;
-      font-size: 17px;
+      font-size: 20px;
+      font-family: $subFont;
+      letter-spacing: 0.7px;
+      text-decoration: none;
+      &:hover, &:active, &:focus {
+        text-decoration: underline;
+      }
     }
+  }
+  &__close-icon {
+    font-size: 25px;
+    margin: 30px 50px;
+    cursor: pointer;
   }
 }
