--- a/css/partials/slide-block-head.scss
+++ b/css/partials/slide-block-head.scss
@@ -2,8 +2,8 @@
   width: 100%;
   height: 100vh;
   text-align: right;
-  background: url("../img/phone-img.svg") 13% 330px no-repeat;
-  background-size: 17%;
+  background: url("../img/phone-img.svg") 13% 450px no-repeat;
+  background-size: 250px;
   background-color: $blue;
   &__heading {
     width: 100%;
