--- a/css/partials/slide-block.scss
+++ b/css/partials/slide-block.scss
@@ -2,13 +2,13 @@
   width: 100%;
   height: 100vh;
   text-align: left;
-  background: url("../img/ipad-img.svg") 106% 150px no-repeat;
-  background-size: 30%;
+  background: url("../img/ipad-img.svg") 106% 230px no-repeat;
+  background-size: 33%;
   background-color: $light-gray;
 
   &--around {
-    background: url("../img/devices-img.svg") -9% 305px no-repeat;
-    background-size: 48%;
+    background: url("../img/devices-img.svg") -21% 330px no-repeat;
+    background-size: 74%;
     background-color: $white;
 
     .slide-content {
@@ -73,22 +73,27 @@
 }
 
 .soc-list {
-  width: 70%;
   display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 
   &__item {
-    span {
-      width: 25%;
-      border: 3px solid $black;
-      color: $black;
-      border-radius: 50%;
-      text-align: center;
-      &:hover, &:active, &:focus {
+    margin: 10px;
+    border: 3px solid $dark-gray;
+    color: $dark-gray;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    i {
+      font-size: 22px;
+      padding: 14px;
+    }
+    &:hover, &:active, &:focus {
+      border-color: $blue;
+      span {
         border-color: $blue;
         color: $blue;
-      }
-      i {
-        font-size: 30px;
       }
     }
   }
