--- a/css/partials/styileguide.scss
+++ b/css/partials/styileguide.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100%;
-  min-width: 1110px;
+
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -11,24 +11,34 @@
     display: flex;
     flex-wrap: wrap;
     height: 100%;
+
     &--header-block {
       justify-content: space-between;
     }
+
     &--slide-block-head {
       align-items: center;
       justify-content: right;
     }
+
     &--slide-block {
       align-items: center;
     }
+
     &--around-slide-block {
       justify-content: flex-end;
     }
+
     &--center-slide-block {
       align-items: center;
       justify-content: center;
     }
+
     &--soc-slide-block {
+      align-items: center;
+      justify-content: center;
+    }
+    &--slide-block-footer {
       align-items: center;
       justify-content: center;
     }
@@ -36,21 +46,14 @@
 
 }
 
-@media (min-width: 576px) {
+@media (max-width: 960px) {
   .container {
-    max-width: 540px
+    min-width: 960px;
   }
 }
-
-@media (min-width: 768px) {
+@media (min-width: 960px) {
   .container {
-    max-width: 720px
-  }
-}
-
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px
+    max-width: 930px
   }
 }
 
@@ -59,9 +62,11 @@
     max-width: 1110px
   }
 }
+
 h1, h2, h3, p {
   margin: 10px 0;
 }
+
 a.btn {
   border: 2px solid $white;
   padding: 15px 25px;
@@ -74,22 +79,38 @@ a.btn {
   font-family: $subFont;
   border-radius: 2px;
   position: relative;
+
   &:hover, &:active, &:focus {
     background-color: $white;
     color: $blue;
     text-decoration: none;
   }
+
   &--red {
     color: $red;
     border-color: $red;
     text-decoration: none;
+
     &:hover, &:active, &:focus {
       background-color: $red;
       color: $white;
     }
   }
+
   &--green {
     text-decoration: none;
+    color: $green;
+    border-color: $green;
+
+    &:hover, &:active, &:focus {
+      color: $white;
+      background-color: $green;
+    }
+  }
+
+  &--white-green {
+    text-decoration: none;
+
     &:hover, &:active, &:focus {
       color: $green;
     }
@@ -97,5 +118,57 @@ a.btn {
 
   i {
     margin-left: 10px;
+  }
+}
+
+.group-item {
+  display: inline-flex;
+  align-items: baseline;
+  &__input {
+    width: 218px;
+    position: relative;
+  }
+
+  i {
+    color: $light-blue;
+    position: absolute;
+    right: 10px;
+    top: 15px;
+  }
+
+  span {
+    margin-right: 20px;
+    color: $dark-gray;
+    letter-spacing: 0.7px;
+  }
+
+
+  input[type='text'] {
+    padding: 11px 30px 11px 20px;
+    border-radius: 15px;
+    border-color: transparent;
+    font-size: 15px;
+    font-weight: 100;
+
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  input[type='text']::-webkit-input-placeholder {
+    color: #D3D3D3
+  }
+
+  input[type='text']::-moz-placeholder {
+    color: #D3D3D3
+  }
+
+  input[type='text']:-moz-placeholder {
+    color: #D3D3D3
+  }
+
+  input[type='text']:-ms-input-placeholder {
+    color: #D3D3D3
   }
 }
