--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
-html {
+html, body {
+  position: relative;
   height: 100%;
 }
-
 body {
   overflow-x: hidden;
   position: relative;
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  padding: 0;
   font-family: 'black_jackregular', sans-serif;
   min-width: 960px;
 }
@@ -18,3 +19,33 @@ body {
 @import "partials/header-block.scss";
 @import "partials/slide-block-head.scss";
 @import "partials/slide-block.scss";
+@import "partials/slide-block-footer.scss";
+@import "partials/swiper-container.scss";
+
+
+
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+
+}
+//.swiper-slide {
+//  text-align: center;
+//  font-size: 18px;
+//  background: #fff;
+//
+//  /* Center slide text vertically */
+//  display: -webkit-box;
+//  display: -ms-flexbox;
+//  display: -webkit-flex;
+//  display: flex;
+//  -webkit-box-pack: center;
+//  -ms-flex-pack: center;
+//  -webkit-justify-content: center;
+//  justify-content: center;
+//  -webkit-box-align: center;
+//  -ms-flex-align: center;
+//  -webkit-align-items: center;
+//  align-items: center;
+//}
