--- a/css/partials/header-block.scss
+++ b/css/partials/header-block.scss
@@ -1,6 +1,3 @@
-//position: relative;
-//flex-grow: 1;
-
 .header-block {
   width: 100%;
   height: 10px;
@@ -20,6 +17,7 @@
 
 .header-menu {
   position: relative;
+  width: calc(100% - 115px);
 
 
   &__icon {
