--- a/css/partials/slide-block.scss
+++ b/css/partials/slide-block.scss
@@ -1,19 +1,30 @@
 .slide-block {
+  box-sizing: border-box;
   width: 100%;
   height: 100vh;
   text-align: left;
-  background: url("../img/ipad-img.svg") 106% 230px no-repeat;
-  background-size: 33%;
+  background: url("../img/ipad-img.svg");
+
+  background-repeat: no-repeat;
+  background-position: bottom -100px right -50px;
   background-color: $light-gray;
+  background-origin: border-box;
+  background-size: contain;
 
   &--around {
-    background: url("../img/devices-img.svg") -21% 330px no-repeat;
-    background-size: 74%;
+    background: url("../img/devices-img.svg");
+    background-repeat: no-repeat;
+    background-position: top 200px right 480px;
+    background-size: contain;
     background-color: $white;
+    background-origin: border-box;
 
     .slide-content {
       width: 35%;
-      margin-top: 150px;
+      margin-top: 100px;
+      &__btn {
+        margin-top: 60px;
+      }
     }
   }
 
@@ -58,7 +69,7 @@
 
     &--with-line {
       position: relative;
-      border-left: 4px solid $blue;
+      border-left: 5px solid $blue;
       padding-left: 15px;
     }
 
