--- a/css/partials/styileguide.scss
+++ b/css/partials/styileguide.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     height: 100%;
+    width: 100%;
 
     &--header-block {
       justify-content: space-between;
@@ -134,6 +135,7 @@ a.btn {
     position: absolute;
     right: 10px;
     top: 15px;
+    cursor: pointer;
   }
 
   span {
@@ -149,7 +151,8 @@ a.btn {
     border-color: transparent;
     font-size: 15px;
     font-weight: 100;
-
+    max-width: 170px;
+    width: 100%;
 
     &:focus {
       outline: none;
@@ -170,5 +173,14 @@ a.btn {
 
   input[type='text']:-ms-input-placeholder {
     color: #D3D3D3
+  }
+
+  button {
+    border: none;
+    background-color: transparent;
+    &:focus {
+      outline: none;
+    }
+
   }
 }
