--- a/css/partials/slide-block-footer.scss
+++ b/css/partials/slide-block-footer.scss
@@ -10,6 +10,7 @@
     color: $dark-gray;
     font-size: 14px;
     font-weight: 300;
+
     a {
       color: $light-blue;
       text-decoration: none;
@@ -19,6 +20,7 @@
       }
     }
   }
+
   &__bnt-up {
     position: absolute;
     width: 40px;
@@ -27,20 +29,11 @@
     background-color: $bg-light-beige;
     right: 40px;
     cursor: pointer;
-    span {
-      position: relative;
-      display: block;
-      width: 100%;
-      height: 100%;
-      &:before {
-        content: '';
-        background: url("/img/icon/icon-to-top.svg") no-repeat;
-        width: 11px;
-        height: 11px;
-        position: absolute;
-        top: 39%;
-        left: 38%;
-      }
+
+   i {
+      font-size: 16px;
+      color: $dark-gray;
+      padding: 11px;
     }
   }
 }
