--- a/css/partials/slide-block-head.scss
+++ b/css/partials/slide-block-head.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   text-align: right;
-  background: url("../img/phone-img.svg");
+  background: url("../img/phone-img.png");
   background-size: contain;
   background-position: left 200px top 400px;
   background-repeat: no-repeat;
