--- a/css/partials/slide-block.scss
+++ b/css/partials/slide-block.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
   text-align: left;
-  background: url("../img/ipad-img.svg");
+  background: url("../img/ipad-img.png");
   background-repeat: no-repeat;
   background-position: bottom -100px right -50px;
   -ms-background-position: bottom -100px right -50px;
@@ -12,7 +12,7 @@
   background-size: contain;
 
   &--around {
-    background: url("../img/devices-img.svg");
+    background: url("../img/devices-img.png");
     background-repeat: no-repeat;
     background-position: left -260px top 200px;
     -ms-background-position: left -260px top 200px;
