--- a/css/style.scss
+++ b/css/style.scss
@@ -11,10 +11,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'black_jackregular', sans-serif;
-  min-width: 960px;
 }
 
 @import "partials/variables.scss";
+@import "partials/mixins.scss";
 @import "partials/styileguide.scss";
 @import "partials/header-block.scss";
 @import "partials/slide-block-head.scss";
